tests/machine/x/st/user_type_literal.st
" Generated by Mochi compiler v0.10.25 on 2025-07-13T05:07:59Z
"
| book |
book := Dictionary from:{'title'->'Go'. 'author'->Dictionary from:{'name'->'Bob'. 'age'->42}}.
Transcript show: (book at: 'author' at: 'name') printString; cr.
